# PET-CT-Tumor-Segmentation-TFM

./: .gitignore  README.md  pyproject.toml
notebooks/eda/: clinical_data.ipynb  image_metadata.ipynb
results/logs/: patients_split.txt
src/data/: detection_dataset.py  dicom_metadata.py  location_dataset.py  patient_split.py
src/features/: dimensionality_reduction.py  statistical_analysis.py
src/pipelines/: build_location_dataset.py  train_yolo.py
src/utils/: visualize.py
