[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pet-ct-tumor-segmentation"
version = "0.1.0"
description = "PET-CT Tumor Segmentation TFM"
authors = [{name = "Your Name"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "openpyxl",
    "scikit-learn",
    "pydicom",
    "tqdm",
    "pyarrow>=18,<19",
    "prince",
    "umap-learn",
    "gower",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["jupyter", "ipython"]
# Heavy deps needed only to train/run the YOLOv12 detector.
detection = ["ultralytics>=8.3", "torch", "torchvision"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
